fix: match native Codex rollout format for session restore
Root cause: Codex thread/resume failed because our exported rollout files
were missing the `session_meta` header line and `response_item` envelope
wrapping that the native Codex format requires. Codex couldn't parse the
thread ID from our bare-item format.

Changes:
- CodexClientExporter: emit `session_meta` header with thread ID, cwd,
  model info; wrap all content items in `response_item` envelopes with
  ISO-8601 timestamps
- CodexClientImporter: unwrap `response_item` envelopes on import; skip
  metadata lines (session_meta, event_msg, turn_context); backward-
  compatible with old bare-item format
- SessionSwitchService: pass project basePath as cwd to exporter
- CodexAppServerClient: show WARNING notification balloon when
  thread/resume fails (was only logged, no user feedback)
- Tests: add format validation and envelope round-trip tests

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>